<resources>
    <string name="app_name">ToDoApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="about">About</string>
    <string name="title_activity_to_do_list">to_do_list</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo_editor">Todo Editor</string>
    <string name="add_new_todo">ADD new Todo</string>
    <string name="title">Title:</string>
    <string name="description">Description</string>
    <string name="descriptiond">Description:</string>
    <string name="time">Time:</string>
    <string name="add">ADD</string>
    <string name="date">Date:</string>
    <string name="picker">Picker</string>
    <string name="todo_title">Todo Title</string>
    <string name="todo_description">Todo Description</string>
</resources>