<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/todoEditTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_todo"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/todoTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/title" />
    <EditText
        android:id="@+id/todoDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/todoDate"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/date"
            android:inputType="date" />
        <Button
            style="@style/Widget.MaterialComponents.Button.Icon"
            app:icon="@drawable/ic_baseline_calendar_today_24"
            android:id="@+id/btn_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/picker"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/todoTime"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/time"
            android:inputType="time" />
        <Button
            style="@style/Widget.MaterialComponents.Button.Icon"
            app:icon="@drawable/ic_baseline_watch_later_24"
            android:id="@+id/btn_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/picker"
            />
    </LinearLayout>

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/add" />


</LinearLayout>
